--- a/index.html
+++ b/index.html
@@ -1,42 +1,91 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Future Fullstack</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="app.css" />
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <section class="vh-100 d-flex flex-column justify-content-center align-items-center">
-          <h1 class="text-center">
-            Become a fullstack developer with the world's best online bootcamp <i class="bi bi-laptop"></i>
-          </h1>
-          <p class="text-center">
-            Join the world's best and most affordable fullstack development bootcamp and master
-            the skills needed to build real-world applications with expert
-            guidance, hands-on projects, and the latest industry tools.
-          </p>
-          <ul class="list-unstyled d-flex gap-3">
-            <li><a class="btn btn-primary" href="#">Get Started</a></li>
-            <li><a class="btn btn-secondary" href="#">Learn More</a></li>
-          </ul>
-        </section>
-      </header>
-    </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Future Fullstack</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+            crossorigin="anonymous" />
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+        <link rel="stylesheet" href="app.css" />
+    </head>
+
+    <body>
+        <div class="container">
+            <header>
+                <section class="vh-100 d-flex flex-column justify-content-center align-items-center">
+                    <h1 class="text-center">
+                        Become a fullstack developer with the world's best online bootcamp
+                        <i class="bi bi-laptop"></i>
+                    </h1>
+                    <p class="text-center">
+                        Join the world's best and most affordable fullstack development
+                        bootcamp and master the skills needed to build real-world
+                        applications with expert guidance, hands-on projects, and the latest
+                        industry tools.
+                    </p>
+                    <ul class="list-unstyled d-flex gap-3">
+                        <li><a class="btn btn-primary" href="#">Get Started</a></li>
+                        <li><a class="btn btn-secondary" href="#">Learn More</a></li>
+                    </ul>
+                </section>
+            </header>
+
+            <main>
+                <section>
+                    <h2 class="text-center mb-5">How it works</h2>
+                    <div class="row justify-content-between">
+                        <div class="col-3">
+                            <div class="card">
+                                <img src="images/video-img-icon.svg" class="card-img-top min-height-feature-img" alt="video" />
+                                <div class="card-body">
+                                    <h3>High quality</h3>
+                                    <p class="card-text">
+                                        The bootcamp delivers high quality, visually engaging videos, with animations
+                                        and clear explanations, perfect for viual learners.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3">
+                            <div class="card">
+                                <img src="images/coding-img-icon.svg" class="card-img-top min-height-feature-img" alt="coding" />
+                                <div class="card-body">
+                                    <h3>Coding</h3>
+                                    <p class="card-text">
+                                        Every concept is taught in comprehensive detail, ensuring students understand
+                                        thoroughly, with no confusion left behind.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3">
+                            <div class="card">
+                                <img src="images/structured-img-icon.svg" class="card-img-top min-height-feature-img" alt="structured" />
+                                <div class="card-body">
+                                    <h3>Structured</h3>
+                                    <p class="card-text">
+                                        The course is structured to guide you through building a fullstack application,
+                                        providing a clear, start-to-finish understanding.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section></section>
+            </main>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+            crossorigin="anonymous"></script>
+    </body>
+
 </html>
