--- a/index.html
+++ b/index.html
@@ -1,91 +1,188 @@
 <!doctype html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Future Fullstack</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-            crossorigin="anonymous" />
-        <link rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-        <link rel="stylesheet" href="app.css" />
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Future Fullstack</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="app.css" />
+</head>
 
-    <body>
-        <div class="container">
-            <header>
-                <section class="vh-100 d-flex flex-column justify-content-center align-items-center">
-                    <h1 class="text-center">
-                        Become a fullstack developer with the world's best online bootcamp
-                        <i class="bi bi-laptop"></i>
-                    </h1>
-                    <p class="text-center">
-                        Join the world's best and most affordable fullstack development
-                        bootcamp and master the skills needed to build real-world
-                        applications with expert guidance, hands-on projects, and the latest
-                        industry tools.
-                    </p>
-                    <ul class="list-unstyled d-flex gap-3">
-                        <li><a class="btn btn-primary" href="#">Get Started</a></li>
-                        <li><a class="btn btn-secondary" href="#">Learn More</a></li>
-                    </ul>
-                </section>
-            </header>
+<body>
+    <header>
+        <section class="container vh-100 d-flex flex-column justify-content-center align-items-center">
+            <h1 class="text-center">
+                Become a fullstack developer with the world's best online bootcamp
+                <i class="bi bi-laptop"></i>
+            </h1>
+            <p class="text-center">
+                Join the world's best and most affordable fullstack development
+                bootcamp and master the skills needed to build real-world
+                applications with expert guidance, hands-on projects, and the latest
+                industry tools.
+            </p>
+            <ul class="list-unstyled d-flex gap-3">
+                <li><a class="btn btn-primary" href="#">Get Started</a></li>
+                <li><a class="btn btn-secondary" href="#">Learn More</a></li>
+            </ul>
+        </section>
+    </header>
 
-            <main>
-                <section>
-                    <h2 class="text-center mb-5">How it works</h2>
-                    <div class="row justify-content-between">
-                        <div class="col-3">
-                            <div class="card">
-                                <img src="images/video-img-icon.svg" class="card-img-top min-height-feature-img" alt="video" />
-                                <div class="card-body">
-                                    <h3>High quality</h3>
-                                    <p class="card-text">
-                                        The bootcamp delivers high quality, visually engaging videos, with animations
-                                        and clear explanations, perfect for viual learners.
-                                    </p>
+    <main>
+        <section class="container mb-12">
+            <h2 class="text-center mb-5">How it works</h2>
+            <div class="row justify-content-between">
+                <div class="col-12 col-md-4 col-lg-3">
+                    <div class="card">
+                        <img src="images/video-img-icon.svg" class="card-img-top min-height-feature-img" alt="video" />
+                        <div class="card-body">
+                            <h3>High quality</h3>
+                            <p class="card-text">
+                                The bootcamp delivers high quality, visually engaging
+                                videos, with animations and clear explanations, perfect for
+                                viual learners.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-4 col-lg-3">
+                    <div class="card my-5 my-md-0">
+                        <img src="images/coding-img-icon.svg" class="card-img-top min-height-feature-img"
+                            alt="coding" />
+                        <div class="card-body">
+                            <h3>Coding</h3>
+                            <p class="card-text">
+                                Every concept is taught in comprehensive detail, ensuring
+                                students understand thoroughly, with no confusion left
+                                behind.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-4 col-lg-3">
+                    <div class="card">
+                        <img src="images/structured-img-icon.svg" class="card-img-top min-height-feature-img"
+                            alt="structured" />
+                        <div class="card-body">
+                            <h3>Structured</h3>
+                            <p class="card-text">
+                                The course is structured to guide you through building a
+                                fullstack application, providing a clear, start-to-finish
+                                understanding.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container mb-12">
+            <h2 class="text-center mb-5">FAQ</h2>
+            <div class="row justify-content-center">
+                <div class="col-8">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Who is this bootcamp for?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    This bootcamp is designed for aspiring fullstack
+                                    developers, whether you're a beginner looking to start
+                                    your coding journey or an experienced developer seeking to
+                                    enhance your skills and build real-world applications. It
+                                    is suitable for individuals who want to learn both
+                                    frontend and backend development, and those who prefer a
+                                    structured, comprehensive learning experience with
+                                    high-quality video content and hands-on projects.
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-3">
-                            <div class="card">
-                                <img src="images/coding-img-icon.svg" class="card-img-top min-height-feature-img" alt="coding" />
-                                <div class="card-body">
-                                    <h3>Coding</h3>
-                                    <p class="card-text">
-                                        Every concept is taught in comprehensive detail, ensuring students understand
-                                        thoroughly, with no confusion left behind.
-                                    </p>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    What will I learn in this bootcamp?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    You will master the essentials of web development,
+                                    including HTML, CSS, JavaScript, and popular frameworks
+                                    like React for frontend development. On the backend,
+                                    you'll learn Node.js, Express, and database management
+                                    with MongoDB. The bootcamp also covers best practices for
+                                    building scalable applications, version control with Git,
+                                    and deployment strategies. By the end of the course,
+                                    you'll have the skills to build and deploy fullstack
+                                    applications confidently.
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-3">
-                            <div class="card">
-                                <img src="images/structured-img-icon.svg" class="card-img-top min-height-feature-img" alt="structured" />
-                                <div class="card-body">
-                                    <h3>Structured</h3>
-                                    <p class="card-text">
-                                        The course is structured to guide you through building a fullstack application,
-                                        providing a clear, start-to-finish understanding.
-                                    </p>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    How is this bootcamp different from others?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Unlike other programs, we focus on detailed, high-quality
+                                    content and hands-on projects that mirror real-world
+                                    applications. Our structured curriculum guides you through
+                                    the entire development process, ensuring you understand
+                                    each concept thoroughly. We also provide expert guidance
+                                    and support throughout your learning journey, making it
+                                    easier for you to grasp complex topics and apply them
+                                    effectively in your projects.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    Do I need any prior knowledge to join this bootcamp?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    No prior knowledge is required. Just a willingness to
+                                    learn! We cover all concepts from the ground up, making it
+                                    accessible for complete beginners. Whether you're new to
+                                    coding or have some experience, our comprehensive
+                                    curriculum is designed to help you succeed and build a
+                                    strong foundation in fullstack development.
                                 </div>
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="bg-primary text-white text-center py-2">
+        &copy; 2025 Future Fullstack. All rights reserved.
+    </footer>
 
-                <section></section>
-            </main>
-        </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-            crossorigin="anonymous"></script>
-    </body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+</body>
 </html>
